<resources>
    <string name="app_name">WanAndroid-Kotlin</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="menu_home">首页</string>
    <string name="menu_knowledge">体系</string>
    <string name="menu_gzh">公众号</string>
    <string name="menu_project">项目</string>
    <string name="menu_me">我的</string>
    <string name="network_not_good">网络不给力</string>
    <string name="action_search">搜索</string>
    <string name="action_setting">设置</string>
    <string name="action_close">关闭</string>
    <string name="about_us">关于我们</string>
    <string name="press_again_to_exit">再按一次退出%1$s</string>
    <string name="loading">正在加载中&#8230;</string>

    <string name="about_content"><![CDATA[
        <h2>网站内容</h2>
        <p>\t\t本网站每天新增20~30篇优质文章，并加入到现有分类中，力求整理出一份优质而又详尽的知识体系，闲暇时间不妨上来学习下知识；除此以外，并为大家提供平时开发过程中常用的工具以及常用的网址导航。</p>
        <p>\t\t当然这只是我们目前的功能，未来我们将提供更多更加便捷的功能…</p>
        <p>\t\t如果您有任何好的建议：</p>
            <br/>\t\t\t\t关于网站排版
            <br/>\t\t\t\t关于新增常用网址以及工具
            <br/>\t\t\t\t未来你希望增加的功能等
        <p>\t\t可以在 <a href="https://github.com/hongyangAndroid/wanandroid" target="_blank">https://github.com/hongyangAndroid/xueandroid</a> 项目中以issue的形式提出，我将及时跟进。</p>
        <p>\t\t如果您希望长期关注本站，可以加入我们的QQ群：<b>591683946</b></p>
        <h2>源码位置</h2>
        <p>\t\t本软件开源，如果你发现任何错误，不要犹豫，马上点击<a href="https://github.com/JsonChao/Awesome-WanAndroid" target="_blank">GitHub</a>，在上面发起<b>issue</b>或者提交<b>pull request</b>。</p>
    ]]></string>
    <string name="share_view">shareView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="user_login">登录</string>
    <string name="user_signup">注册</string>
    <string name="user_name_hint">请输入用户名</string>
    <string name="user_password_hint">请输入密码</string>
    <string name="user_verify_password_hint">请输入确认密码</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- 时间和日期 -->
    <string name="minutes_ago">分钟前</string>
    <string name="hours_ago">小时前</string>
    <string name="days_ago">天前</string>
    <string name="weeks_ago">周前</string>
    <string name="year">年</string>
    <string name="month">个月</string>
    <string name="day">天</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>

    <!-- 分享 -->
    <string name="share_to">分享到</string>
    <string name="wechat">微信</string>
    <string name="wechat_memory">朋友圈</string>
    <string name="qq_friends">QQ</string>
    <string name="qq_zone">QQ空间</string>
    <string name="weibo">微博</string>
    <string name="more">更多</string>
    <string name="share_unknown_error">分享出现未知异常</string>
    <string name="your_phone_does_not_install_qq">您的手机还没有安装QQ</string>
    <string name="your_phone_does_not_install_wechat">您的手机还没有安装微信</string>
    <string name="your_phone_does_not_install_weibo">您的手机还没有安装微博</string>
    <string name="your_phone_does_not_install_qq_zone">您的手机还没有安装QQ空间</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>