<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/navigation_system"
        android:icon="@drawable/system"
        android:title="@string/menu_knowledge" />

    <item
        android:id="@+id/navigation_gzh"
        android:icon="@drawable/gzh"
        android:title="@string/menu_gzh" />

    <item
        android:id="@+id/navigation_project"
        android:icon="@drawable/project"
        android:title="@string/menu_project" />

    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/mine"
        android:title="@string/menu_me" />

</menu>
